--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-replace": "2.2.0",
-    "rollup-plugin-terser": "7.0.2"
+    "rollup-plugin-terser": "7.0.2",
+    "@testing-library/react": "^12.1.2"
   },
   "files": [
     "dist"
@@ -86,7 +87,6 @@
     "react-dom": "17.0.2"
   },
   "dependencies": {
-    "@testing-library/react": "^12.1.2",
     "lodash.debounce": "^4.0.8",
     "lodash.get": "^4.4.2"
   },
