--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-lightning-context",
-  "version": "1.1.7",
+  "version": "1.2.0",
   "description": "a performant react context",
   "author": "guiyep",
   "license": "MIT",
@@ -37,6 +37,7 @@
     "@storybook/addon-links": "^6.4.4",
     "@storybook/react": "^6.4.4",
     "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "babel-eslint": "10.1.0",
     "babel-jest": "^27.4.2",
@@ -75,8 +76,7 @@
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-replace": "2.2.0",
-    "rollup-plugin-terser": "7.0.2",
-    "@testing-library/react": "^12.1.2"
+    "rollup-plugin-terser": "7.0.2"
   },
   "files": [
     "dist"
@@ -87,7 +87,8 @@
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8",
-    "lodash.get": "^4.4.2"
+    "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2"
   },
   "browserslist": [
     "last 2 versions",
