--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-lightning-context",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "a performant react context",
   "author": "guiyep",
   "license": "MIT",
@@ -76,7 +76,9 @@
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-replace": "2.2.0",
-    "rollup-plugin-terser": "7.0.2"
+    "rollup-plugin-terser": "7.0.2",
+    "lint-staged": "11.0.0",
+    "husky": "7.0.1"
   },
   "files": [
     "dist"
@@ -86,8 +88,7 @@
     "react-dom": "17.0.2"
   },
   "dependencies": {
-    "lodash.debounce": "^4.0.8",
-    "lodash.set": "^4.3.2"
+    "lodash.debounce": "^4.0.8"
   },
   "browserslist": [
     "last 2 versions",
@@ -95,5 +96,17 @@
     "not opera >= 0",
     "not opera >= 0",
     "not ie <= 11"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/**/*.{js,jsx}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
+  }
 }
