--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "build": "rollup -c",
     "build-prod": "NODE_ENV=production BABEL_ENV=production rollup -c",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "eslint": "eslint --fix",
+    "prettier": "prettier --write"
   },
   "devDependencies": {
     "@atlaskit/button": "^16.1.4",
@@ -45,7 +47,7 @@
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "babel-preset-minify": "0.5.1",
     "core-js": "3.19.2",
-    "eslint": "8.3.0",
+    "eslint": "^8.4.1",
     "eslint-config-airbnb": "19.0.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-standard": "16.0.3",
@@ -59,8 +61,11 @@
     "eslint-plugin-standard": "5.0.0",
     "extend-shallow": "3.0.2",
     "generate-random-data": "0.0.3",
+    "husky": "7.0.1",
     "jest": "^27.4.2",
+    "lint-staged": "11.0.0",
     "postcss": "^8.3.9",
+    "prettier": "2.3.2",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -76,9 +81,7 @@
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-replace": "2.2.0",
-    "rollup-plugin-terser": "7.0.2",
-    "lint-staged": "11.0.0",
-    "husky": "7.0.1"
+    "rollup-plugin-terser": "7.0.2"
   },
   "files": [
     "dist"
@@ -104,8 +107,8 @@
   },
   "lint-staged": {
     "src/**/**/*.{js,jsx}": [
-      "prettier --write",
-      "eslint --fix",
+      "yarn run prettier",
+      "yarn run eslint",
       "git add"
     ]
   }
