--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-lightning-context",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "a performant react context",
   "author": "guiyep",
   "license": "MIT",
@@ -26,7 +26,8 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "eslint": "eslint --fix",
-    "prettier": "prettier --write"
+    "prettier": "prettier --write",
+    "lint-s": "lint-staged"
   },
   "devDependencies": {
     "@atlaskit/button": "^16.1.4",
@@ -55,6 +56,7 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "5.1.1",
     "eslint-plugin-react": "7.27.1",
     "eslint-plugin-react-hooks": "4.3.0",
@@ -102,14 +104,13 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "npm test && lint-staged"
+      "pre-commit": "yarn test && lint-staged"
     }
   },
   "lint-staged": {
-    "src/**/**/*.{js,jsx}": [
+    "*.{js,jsx}": [
       "yarn run prettier",
-      "yarn run eslint",
-      "git add"
+      "yarn run eslint"
     ]
   }
 }
