--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,5 +23,6 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - run: yarn
+      - run: yarn lint
       - run: yarn test
       - run: yarn build-prod
