--- a/.eslintrc
+++ b/.eslintrc
@@ -35,9 +35,13 @@
     ],
     "react/prop-types": [2, { "skipUndeclared": true }],
     "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/control-has-associated-label": "off",
+    "no-plusplus": "off",
+    "jsx-a11y/label-has-associated-control": "off",
     "no-use-before-define": "off",
     "prefer-destructuring": "off",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "error"
+    "react-hooks/exhaustive-deps": "error",
+    "react/function-component-definition": [2, { "namedComponents": "arrow-function" }]
   }
 }
