--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^29.5.3",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
